--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,130 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Open Sans', sans-serif;
+  box-sizing: border-box;
+  background-image: url('./asset/img/background-img2.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  display: flex;
+  column-gap: 8px;
+  flex-wrap: wrap;
+  row-gap: 10px;
+}
+
+.list-container {
+  background-color: #ebecf0;
+  border-radius: 3px;
+  max-height: 100%;
+  white-space: normal;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 100%;
+  min-width: 300px;
+}
+
+.list-header {
+  overflow: hidden;
+  overflow-wrap: break-word;
+  height: 28px;
+  margin-left: 15px;
+}
+
+.list-cards {
+  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
+  margin: 0 4px;
+  padding: 0 4px;
+}
+
+.list-card {
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 1px 0 rgba(9, 30, 66, 0.25);
+  cursor: pointer;
+  display: block;
+  margin-bottom: 8px;
+  max-width: 300px;
+  min-height: 20px;
+  position: relative;
+  font-size: 14px;
+  padding: 8px;
+}
+
+.list-card:hover {
+  color: #091e42;
+  background-color: #f4f5f7;
+}
+
+.btn-add-card {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  padding: 10px;
+  cursor: pointer;
+  color: #6b778c;
+  display: flex;
+  align-items: center;
+}
+
+.icon-add {
+  margin-right: 5px;
+}
+
+.custom-textarea {
+  width: 100%;
+  resize: none;
+  font-family: 'Open Sans', sans-serif;
+  border: none;
+  outline: none;
+  font-size: 14px;
+  background-color: transparent;
+}
+
+.btn-container {
+  padding: 0 8px;
+  margin-bottom: 8px;
+  display: flex;
+  align-items: center;
+}
+
+.btn-form-card {
+  border: none;
+  border-radius: 3px;
+  outline: none;
+  background-color: #5aac44;
+  color: #fff;
+  font-size: 14px;
+  padding: 6px 12px;
+  margin-right: 12px;
+  cursor: pointer;
+}
+
+.btn-form-card:hover {
+  background-color: #61bd4f;
+}
+
+.icon-close {
+  color: #6b778c;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.btn-add-list {
+  border: none;
+  border-radius: 3px;
+  outline: none;
+  background-color: rgba(0, 0, 0, 0.08);
+  color: #172b4d;
+  font-size: 14px;
+  padding: 6px 8px;
+  cursor: pointer;
+  width: 100%;
+  text-align: left;
+  height: 32px;
 }
